# grpc-rs-basicpersonality

./: Cargo.toml
protos/: basicpersonality.proto
src/: basicpersonality.rs  basicpersonality_grpc.rs  client.rs  libr.rs
