[package]
name = "basicpersonality"
version = "0.0.1"
authors = ["Daz Wilkin <dazwilkin@google.com>"]

[[bin]]
name = "client"
path = "./src/client.rs"

[dependencies]
futures = "^0.1.15"
protobuf = { version = "2.7.0", optional = true }
log = "0.3"
grpcio = { version = "0.4.4", features = ["openssl"] }

[build-dependencies]
protobuf = { version = "2.7.0", optional = true }
